# tesla_dashcam_timestamp

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/core/: video_processor.py
src/ui/: main_window.py
src/utils/: file_handler.py
