[project]
name = "TeslaDashcam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-progress-yield>=0.12.0",
    "pyside6>=6.9.0",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
]

[tool.ruff]
target-version = "py312"
extend-exclude = []
lint.extend-select = ["E501"]
line-length = 80
