[project]
name = "TeslaDashcam"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-progress-yield>=0.12.0",
    "pyside6>=6.9.0",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "pyright>=1.1.411",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py312"
line-length = 80
preview = true

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "UP", "I", "N"]
ignore = ["E741"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
typeCheckingMode = "standard"
